--- a/index.html
+++ b/index.html
@@ -3,29 +3,108 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>esp
-		</title>
+		<title>ESP Routage</title>
+
+		<link rel="icon" href="./images/logo.webp" />
 	</head>
 	<body style="opacity: 0;">
-		<section class="section--beige">
+		<section class="section">
+			<div class="container">
+				<div class="header">
+					<div class="header__logo col-1--span-1"><img src="/images/logo.webp" alt="esp routage logo"></div>
+					<div class="header__links col-4--span-6">
+						<p class="header__links__item active">Accueil</p>
+						<p class="header__links__item">Services</p>
+						<p class="header__links__item">Qui sommes nous</p>
+						<p class="header__links__item">Contact</p>
+					</div>
+					<a href="#" target="_blank" class="button header__button button--dark button--fx col-11--span-2" data-delay="0.5" data-animation="button">
+						<span>
+							<span>Postuler</span>
+						</span>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M247.539-268.461 220-296l403.231-404H251.538v-40h440.001v440h-40.001v-371.692L247.539-268.461Z"/></svg>
+					</a>
+				</div>
+			</div>
+		</section>
+		<section class="section section--micro--padding">
 			<div class="container">
 				<div class="hero">
 					<div class="hero__content">
-						<h1 class="col-6--span-2" data-animation='text-reveal'>esp
-						</h1>
-						<p class="col-4--span-6" data-animation='text-reveal'>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam veniam corrupti ea mollitia accusantium, repudiandae doloribus distinctio. Perspiciatis unde, magnam quibusdam consequatur repellat molestias quam excepturi quod harum inventore ab?
-						</p>
-						<a href="#" class="button button--dark button--fx col-7--span-3" data-delay="0.5" data-animation="button">
-							<span>
-								<span>Découvrir</span>
-							</span>
-							<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M247.539-268.461 220-296l403.231-404H251.538v-40h440.001v440h-40.001v-371.692L247.539-268.461Z"/></svg>
-						</a>
+						<div class="hero__head">
+							<h1 class="hero__heading">ESP : Concevoir & Diffuser</h1>
+							<div class="hero__head__img"></div>
+						</div>
+						<div class="hero__shape">
+							<div class="hero__shape__tags">
+								<div class="hero__shape__tag">
+									<div class="hero__shape__tag__inner"></div>
+									<p>+ Lorem</p>
+								</div>
+								<div class="hero__shape__tag">
+									<div class="hero__shape__tag__inner"></div>
+									<p>+ Lorem</p>
+								</div>
+								<div class="hero__shape__tag">
+									<div class="hero__shape__tag__inner"></div>
+									<p>+ Lorem</p>
+								</div>
+							</div>
+							<video src="./images/hero.mp4" muted autoplay loop></video>
+							<div class="hero__shape__inner">
+								<p class="hero__shape__inner__text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt eos beatae ea culpa, quaerat in nesciunt libero quas dignissimos quidem, expedita illo quae dolores commo.
+								</p>
+								<div class="hero__shape__inner__left"></div>
+								<div class="hero__shape__inner__right"></div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+		<section class="section section--small--padding ">
+			<div class="container">
+				<div class="services">
+				<!-- <div class="services"  data-scroll-section> -->
+					<!-- <span class="lerp-wrap" data-scroll>
+						<span data-scroll data-scroll-delay="0.18" data-scroll-speed="3">F</span>
+						<span data-scroll data-scroll-delay="0.1" data-scroll-speed="3">I</span>
+						<span data-scroll data-scroll-delay="0.08" data-scroll-speed="3">R</span>
+						<span data-scroll data-scroll-delay="0.06" data-scroll-speed="3">S</span>
+						<span data-scroll data-scroll-delay="0.04" data-scroll-speed="3">T</span>
+					</span> -->
+					<div class="services__left">
+						<img src="./images/imgholder.jpg" alt="img holder">
+						<img src="./images/imgholder.jpg" alt="img holder">
+						<img src="./images/imgholder.jpg" alt="img holder">
+						<img src="./images/imgholder.jpg" alt="img holder">
+					</div>
+					<div class="services__content">
+						<h2 class="services__content__title">Nos Services</h2>
+						<div class="services__content__container">
+							<div class="services__content__container__service">
+								<h3 class="services__content__container__service__title">Routage Fiable</h3>
+								<p class="services__content__container__service__desc">Notre service assure une distribution précise, que ce soit par voie postale ou électronique. Suivi détaillé pour une livraison fiable.</p>
+							</div>
+							<div class="services__content__container__service">
+								<h3 class="services__content__container__service__title">Communication sur Mesure</h3>
+								<p class="services__content__container__service__desc">Des stratégies de communication personnalisées pour toucher votre public de manière efficace.</p>
+							</div>
+							<div class="services__content__container__service">
+								<h3 class="services__content__container__service__title">Logistique Optimisée</h3>
+								<p class="services__content__container__service__desc">Expertise logistique pour une gestion optimale des stocks et flux de produits.</p>
+							</div>
+							<div class="services__content__container__service">
+								<h3 class="services__content__container__service__title">Sécurité des Données</h3>
+								<p class="services__content__container__service__desc">Protocoles de sécurité stricts pour garantir la confidentialité de vos informations à chaque étape.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section section--big--padding section--big--margin">p</section>
 		<script type="module" src="./app/index.js"></script>
 	</body>
 </html>
