--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <link rel="icon" href="./src/assets/logo.webp" />
     <meta name="description" content="Pour toutes vos opérations de marketing direct, presse, courriers de gestion, ESP Communication et ESP Routage prennent en charge vos besoins, de la conception à la diffusion.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
